--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dodam
-spring.profiles.include=
+spring.profiles.include=secret
+
+logging.level.com.example.dodam=debug
