Implement Image save

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dodam
+
 spring.profiles.include=secret
+spring.profiles.active=local
 
 logging.level.com.example.dodam=debug
