Add file upload information

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.profiles.include=secret
 spring.profiles.active=local
 
 logging.level.com.example.dodam=debug
+
+# file.dir = 사진 저장을 원하는 파일 위치 절대주소 (C:/.../dodam/file/)
+# spring.servlet.multipart.max-file-size=20MB 최대 파일 크기
