--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.username=dodam
+spring.datasource.password=dodam123
+spring.datasource.url=jdbc:mysql://localhost:3306/dodam?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#driver-class-name: com.mysql.cj.jdbc.Driver
+#username: dodam
+#password: dodam123
+#url: localhost:3306/???????(-> dodam?? ??)
