--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,20 @@
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dodam
-spring.profiles.include=secret
+spring.datasource.url=jdbc:mysql://localhost:3306/diary_order
+spring.datasource.username=root
+spring.datasource.password=8850
+#=======
+#spring.datasource.username=dodam
+#spring.datasource.password=dodam123
+#spring.datasource.url=jdbc:mysql://localhost:3306/dodam?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#driver-class-name: com.mysql.cj.jdbc.Driver
+#username: dodam
+#password: dodam123
+#url: localhost:3306/???????(-> dodam?? ??)
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/dodam
+#spring.profiles.include=secret
+#=======
