--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# MySQL ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/dodam?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=dodam
+spring.datasource.password=dodam123
