--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/diary_order
-spring.datasource.username=root
-spring.datasource.password=8850
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/diary_order
+#spring.datasource.username=root
+#spring.datasource.password=8850
 #=======
 #spring.datasource.username=dodam
 #spring.datasource.password=dodam123
@@ -14,15 +14,8 @@ spring.datasource.password=8850
 #password: dodam123
 #url: localhost:3306/???????(-> dodam?? ??)
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/dodam
-#spring.profiles.include=secret
-#=======
 
-
-#<<<<<<< HEAD
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/dodam
-#spring.profiles.include=secret
-#=======
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/dodam
+spring.profiles.include=secret
 
