feat(Step) : feat, add

--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,20 @@ repositories {
 }
 
 dependencies {
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	//MySql
+	runtimeOnly 'mysql:mysql-connector-java'
+	//임시db h2
+	runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
